Formulário com informações de linhas selecionadas da tabela

--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,12 @@ th {
     border: 1px solid black;
     padding: 4px;
 }
+
+
+.form {
+    padding: 100px;
+    width: 50vh;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
