--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -8,10 +8,32 @@
     font-family: "Open Sans", sans-serif;
 }
 
+button {
+    all: unset;
+    display: inline-block;
+    box-sizing: border-box;
+    cursor: pointer; 
+}
+
 header {
     display: flex;
     justify-content: center;
     padding: 1rem;
+}
+
+header button{
+    position: absolute;
+    left: 1rem;
+    top: 1rem;
+    width: 100px;
+    border: 2px solid black;
+    border-radius: 20px;
+    text-align: center;
+    transition: 0.3s all ease;
+}
+
+header button:hover {
+    background-color: #ff0000;
 }
 
 header img {
