--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -8,11 +8,21 @@
     font-family: "Open Sans", sans-serif;
 }
 
+/* Estilos para o tema claro */
+body.light-mode {
+    background-color: #f0f0f0;
+    color: #333;
+}
+
 button {
-    all: unset; /* Remove todos os estilos de todos os elementos */
-    display: inline-block; /* Mantém o botão como um elemento inline-block */
-    box-sizing: border-box; /* Garante que o padding e border sejam incluídos no tamanho total */
-    cursor: pointer; /* Mantém o cursor de ponteiro */
+    all: unset;
+    /* Remove todos os estilos de todos os elementos */
+    display: inline-block;
+    /* Mantém o botão como um elemento inline-block */
+    box-sizing: border-box;
+    /* Garante que o padding e border sejam incluídos no tamanho total */
+    cursor: pointer;
+    /* Mantém o cursor de ponteiro */
 }
 
 main {
@@ -50,10 +60,68 @@ main .buttons button {
     justify-content: center;
 }
 
-.logo img{
+.logo img {
     transition: 0.3s all ease;
 }
 
 .logo img:hover {
     scale: 1.2;
+}
+
+
+/* Estilos para o switch */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #000000;
+    transition: .4s;
+    border-radius: 34px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 8px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    border-radius: 50%;
+    left: 4px;
+    bottom: 4px;
+    background-color: #ffffff;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #ffffff;
+}
+
+input:checked+.slider:before {
+    transform: translateX(26px);
+    background-color: #000000;
+}
+
+/* Estilos para o tema escuro */
+body.dark-mode {
+    background-color: #333333;
+    color: #ffffff;
 }
