--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -104,7 +104,7 @@ section.tabela-form {
     overflow-y: auto;
 }
 
-table {
+table#tabelaClientes {
     border-collapse: collapse;
     margin: 15px 0;
     margin-left: 100px;
@@ -119,7 +119,7 @@ th {
     font-size: 14px;
 }
 
-tr:hover {
+table#tabelaClientes tr:hover {
     background-color: rgb(186, 236, 236);
     cursor: pointer;
 }
@@ -135,7 +135,8 @@ tr:hover {
 
 /* Estilo geral para as divs de modal */
 #add-cliente,
-#add-imagem {
+#add-imagem,
+#filtro-colab {
     display: none;
     flex-direction: column;
     justify-content: center;
@@ -212,12 +213,8 @@ tr:hover {
 }
 
 .form-edicao p {
-    margin-bottom: 10px;
+    margin: 12px 0 5px 0;
     font-weight: 600;
-}
-
-.form-edicao p#caderno {
-    margin-top: 10px;
 }
 
 .form-edicao h1 {
@@ -242,4 +239,9 @@ tr:hover {
     padding: 1rem 0;
     display: flex;
     justify-content: center;
+}
+
+table#tabela-colab {
+    border-collapse: collapse;
+    width: 80%;
 }
