--- a/css/stylePos.css
+++ b/css/stylePos.css
@@ -142,6 +142,7 @@ th {
     text-align: center;
     font-family: 'Arial', sans-serif;
     color: #333;
+    margin-bottom: 40px;
 }
 
 #form-inserir form {
@@ -187,10 +188,11 @@ th {
 }
 
 #form-inserir button {
-    background-color: #007bff;
-    color: white;
-    padding: 10px;
+    background-color: #00ff37;
+    color: black;
+    padding: 8px;
     font-size: 16px;
+    font-weight: 500;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -199,4 +201,16 @@ th {
 
 #form-inserir button:hover {
     background-color: #0056b3;
+}
+
+button#deleteButton {
+    background-color: #ff0000;
+    color: white;
+    padding: 5px;
+    font-size: 14px;
+    font-weight: 500;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
