--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -59,6 +59,7 @@ nav a {
     height: 50px;
     border-right: 1px solid black;
     transition: .3s;
+    text-align: center;
 }
 
 nav a:first-child {
@@ -78,11 +79,13 @@ nav a.active {
 section.tabela-form {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 20px;
     margin-top: 50px;
+    padding: 0 10px;
 }
 
 #filtro {
-    margin-left: 100px;
+    margin-left: 0;
 }
 
 #filtro h1,
@@ -94,31 +97,229 @@ section.tabela-form {
 
 #filtro select,
 #filtro input {
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
     font-size: 16px;
     padding: 5px;
+    box-sizing: border-box;
 }
 
 .tabelaClientes {
     margin-top: 15px;
     height: 50vh;
     overflow-y: auto;
-
 }
 
 table#tabelaClientes {
     border-collapse: collapse;
-    margin-left: 100px;
+    width: 100%;
+    margin-left: 0;
 }
 
 td,
-tr,
 th {
     border: 1px solid black;
-    padding: 1px;
+    padding: 8px;
     text-align: center;
     font-size: 14px;
+
 }
+
+table#tabelaClientes td,
+table#tabelaClientes th {
+    max-width: 80px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+table#tabela-obra td:first-child,
+table#tabela-obra th:first-child {
+    max-width: 500px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.nav-toggle {
+    display: none;
+    font-size: 30px;
+    cursor: pointer;
+    background: none;
+    border: none;
+    color: black;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+
+@media (max-width: 2560px) {
+    section.tabela-form {
+        grid-template-columns: 2fr 1fr;
+        margin-top: 50px;
+        padding: 0 30px;
+    }
+}
+
+@media (max-width: 1920px) {
+    section.tabela-form {
+        grid-template-columns: 1fr 1fr;
+        margin-top: 50px;
+        padding: 0 20px;
+        margin-left: 50px;
+    }
+}
+
+@media (max-width: 1318px) {
+
+    section.tabela-form {
+        grid-template-columns: 1fr;
+        margin-left: 0;
+    }
+
+    #filtro {
+        margin-left: 0;
+    }
+
+    #filtro select,
+    #filtro input {
+        max-width: 50%;
+        margin-top: 10px;
+    }
+
+    td,
+    th {
+        font-size: 12px;
+    }
+
+    form#form-add input,
+    form#form-add select {
+        width: 120px;
+    }
+}
+
+@media (max-width: 768px) {
+
+    nav {
+        justify-content: space-between;
+    }
+
+    nav a {
+        width: 300px;
+        text-align: center;
+    }
+
+    .nav-menu {
+        display: none;
+        flex-direction: column;
+        background-color: #333;
+        position: absolute;
+        top: 50px;
+        right: 10px;
+        width: 300px;
+        z-index: 1000;
+    }
+
+    .nav-toggle {
+        display: block;
+    }
+
+    .nav-menu.active {
+        display: flex;
+    }
+
+    .nav-menu a {
+        padding: 8px;
+        color: white;
+        text-decoration: none;
+        border-bottom: 1px solid #444;
+    }
+
+    .nav-menu a:hover {
+        background-color: #555;
+    }
+
+    section.tabela-form {
+        grid-template-columns: 1fr;
+        margin-left: 0;
+    }
+
+    #filtro {
+        margin-left: 0;
+    }
+
+    #filtro select,
+    #filtro input {
+        max-width: 50%;
+        margin-top: 10px;
+    }
+
+    td,
+    th {
+        font-size: 12px;
+    }
+
+    form#form-add input,
+    form#form-add select {
+        width: 120px;
+    }
+}
+
+@media (max-width: 480px) {
+
+    section.tabela-form {
+        width: 100%;
+        overflow-x: auto;
+    }
+
+    table#tabelaClientes {
+        width: 100%;
+        min-width: 480px;
+    }
+
+    nav a {
+        width: 200px;
+        text-align: center;
+    }
+
+    #filtro select,
+    #filtro input {
+        font-size: 14px;
+    }
+
+    .nav-menu {
+        display: none;
+        flex-direction: column;
+        background-color: #333;
+        position: absolute;
+        top: 50px;
+        right: 10px;
+        width: 200px;
+        z-index: 1000;
+    }
+
+    .nav-toggle {
+        display: block;
+    }
+
+    .nav-menu.active {
+        display: flex;
+    }
+
+    .nav-menu a {
+        padding: 8px;
+        color: white;
+        text-decoration: none;
+        border-bottom: 1px solid #444;
+    }
+
+    .nav-menu a:hover {
+        background-color: #555;
+    }
+}
+
+
 
 .selecionada {
     background-color: #e2ba09;
@@ -137,7 +338,6 @@ table#tabelaClientes tr:hover {
 }
 
 
-/* Estilo geral para as divs de modal */
 #add-cliente,
 #add-imagem {
     display: none;
