--- a/css/styleDashboard.css
+++ b/css/styleDashboard.css
@@ -43,10 +43,38 @@ button {
     margin-bottom: 20px;
 }
 
+.container-boxes {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 50vh;
+    gap: 20px;
+    padding: 10px;
+}
+
+.box1 {
+    border: 1px solid black;
+    grid-column: 1;
+}
+.box2 {
+    border: 1px solid black;
+    grid-column: 2;
+
+}
+.box3 {
+    border: 1px solid black;
+    grid-column: 3;
+
+}
+
+
+
+
+
 main {
     background-color: #f4f4f4;
     display: flex;
     flex-direction: column;
+    grid-column: 2;
 }
 
 .header {
