--- a/css/styleDashboard.css
+++ b/css/styleDashboard.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Work Sans", sans-serif;
+    font-family: "Nunito", sans-serif;
 }
 
 body {
