--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -23,10 +23,20 @@ header {
     padding: 1rem;
 }
 
+.buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+button#usuario {
+    transition: .3s all ease;
+}
+
+button#usuario:hover {
+    scale: 1.2;
+}
+
 button#voltar {
-    position: absolute;
-    left: 1rem;
-    top: 1rem;
     width: 100px;
     border: 2px solid black;
     border-radius: 20px;
@@ -473,4 +483,95 @@ table#tabela-follow {
     align-items: center;
     gap: 15px;
     padding: 50px;
+}
+
+.modal-edit {
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+/* Quando o modal for exibido */
+.modal-edit.show {
+    opacity: 1;
+    visibility: visible;
+}
+
+/* Conteúdo do modal */
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 500px;
+    width: 100%;
+    transform: translateY(-30px);
+    transition: transform 0.3s ease;
+}
+
+/* Animação para o modal quando ele for exibido */
+.modal-edit.show .modal-content {
+    transform: translateY(0);
+}
+
+/* Estilos para o cabeçalho e o botão de fechar */
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.close-btn {
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+/* Estilos do formulário */
+.modal-body form {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-body label {
+    margin: 10px 0 5px;
+}
+
+.modal-body input {
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.modal-footer button {
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-left: 10px;
+}
+
+.btn-secondary {
+    background-color: #6c757d;
+    color: white;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    color: white;
 }
