--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -28,12 +28,39 @@ header {
     justify-content: space-between;
 }
 
-button#usuario {
+.hidden {
+    display: none;
+}
+
+#menu {
+    background-color: #f1f1f1;
+    border-radius: 10px;
+    position: absolute;
+    right: 0;
+    z-index: 1;
+    margin-top: 30px;
+    min-width: 10rem;
+    padding: .5rem 0;
     transition: .3s all ease;
 }
 
-button#usuario:hover {
-    scale: 1.2;
+#menu a {
+    display: block;
+    padding: 5px;
+    text-decoration: none;
+    color: black;
+    font-size: 0.85rem;
+    padding: .25rem 1.5rem;
+    border-radius: 2px;
+    transition: .3s all ease;
+}
+
+#menu a i {
+    margin-right: 10px;
+}
+
+#menu a:hover {
+    background-color: #ccc;
 }
 
 button#voltar {
