--- a/css/stylePos.css
+++ b/css/stylePos.css
@@ -28,9 +28,13 @@ header button#voltar {
     top: 1rem;
     width: 100px;
     border: 2px solid black;
-    border-radius: 20px;
+    border-radius: 15px;
     text-align: center;
     transition: 0.3s all ease;
+}
+
+header button#voltar:hover {
+    background-color: #ff0000c0;
 }
 
 header button#openModalBtn {
@@ -77,7 +81,6 @@ th {
 }
 
 
-/* O modal será invisível por padrão */
 .modal {
     display: none;
     position: fixed;
@@ -91,22 +94,17 @@ th {
     align-items: center;
 }
 
-/* Conteúdo do modal */
 .modal-content {
     background-color: white;
     padding: 20px;
     border-radius: 10px;
     width: 40%;
-    /* Diminui o tamanho do modal */
     max-height: 70%;
-    /* Limita a altura do modal */
     overflow-y: auto;
-    /* Adiciona scroll vertical caso o conteúdo ultrapasse o limite */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     animation: showModal 0.3s ease;
 }
 
-/* Animação de abrir modal */
 @keyframes showModal {
     from {
         transform: scale(0.8);
@@ -119,7 +117,6 @@ th {
     }
 }
 
-/* Botão para fechar o modal */
 .close {
     color: #aaa;
     float: right;
@@ -132,7 +129,6 @@ th {
     color: black;
 }
 
-/* Estilização do formulário */
 #form-inserir {
     padding: 10px;
     font-family: 'Arial', sans-serif;
