--- a/css/styleMetas.css
+++ b/css/styleMetas.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Nunito", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 button,
@@ -78,7 +78,7 @@ select#anoSelect {
 main {
     width: 100%;
     display: grid;
-    grid-template-columns: 400px 1fr 1fr;
+    grid-template-columns: 300px 1fr 1fr;
     gap: 30px;
     padding: 40px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
@@ -98,19 +98,38 @@ canvas#imagensChart {
     height: 50vh;
     justify-content: center;
     animation: fadeIn 1s ease-in-out forwards;
-
 }
 
 .total_anual,
 .total_mes {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    /* Coloca o conteúdo em coluna */
+    gap: 10px;
+    /* Espaço entre os elementos dentro de cada seção */
     border: 1px solid #ccc;
     padding: 30px;
     border-radius: 5px;
     text-align: center;
     align-items: center;
     background-color: #ffffff;
+}
+
+.total_anual h2,
+.total_mes h2 {
+    margin-bottom: 20px;
+    /* Espaço abaixo do título */
+    font-size: 24px;
+    /* Tamanho do título */
+    font-weight: bold;
+}
+
+.total_anual div,
+.total_mes div {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    /* Faz com que as divs ocupem toda a largura disponível */
 }
 
 #descricao label {
