--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -612,3 +612,64 @@ table#tabela-follow {
     background-color: #007bff;
     color: white;
 }
+
+
+
+#modalLogs {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 40%;
+    max-height: 70%;
+    overflow-y: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    animation: showModal 0.3s ease;
+}
+
+.modal-content h2 {
+    margin-bottom: 15px;
+}
+
+table#tabela-logs {
+    border-collapse: collapse;
+    margin: 0 auto;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover {
+    color: black;
+}
+
+button#mostrarLogsBtn {
+    background-color: #37befc;
+    border: 1px solid black;
+    border-radius: 15px;
+    padding: 6px;
+    font-size: 14px;
+    transition: .3s all ease;
+}
+
+button#mostrarLogsBtn:hover {
+    font-weight: bold;
+}
