--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -120,7 +120,7 @@ nav a.active {
 
 section.tabela-form {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
     gap: 20px;
     margin-top: 50px;
     padding: 0 10px;
@@ -166,7 +166,7 @@ table#tabelaClientes {
 td,
 th {
     border: 1px solid black;
-    padding: 8px;
+    padding: 6px;
     text-align: center;
     font-size: 14px;
 
@@ -174,7 +174,7 @@ th {
 
 table#tabelaClientes td,
 table#tabelaClientes th {
-    max-width: 60px;
+    max-width: 20px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -182,7 +182,7 @@ table#tabelaClientes th {
 
 table#tabelaClientes th.nome-imagem,
 table#tabelaClientes td.nome-imagem {
-    max-width: 150px;
+    max-width: 200px;
 }
 
 table#tabela-obra td:first-child,
@@ -216,10 +216,11 @@ table#tabela-obra th:first-child {
 
 @media (max-width: 1920px) {
     section.tabela-form {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1.5fr 1fr;
         margin-top: 50px;
         padding: 0 20px;
         margin-left: 50px;
+        gap: 100px;
     }
 }
 
